fix overflow thumb

--- a/src/js/components/Movies/Thumb.less
+++ b/src/js/components/Movies/Thumb.less
@@ -11,7 +11,6 @@
   //flex: 1;
   flex: 1 1 auto;
   &.episode {
-    overflow: hidden;
     width: @thumb-width-episode;
     height: @thumb-height-episode + 70px;
     a {
